# homecare-visit-triage-agent

./: .gitignore  ARCHITECTURE.md  README.md  config.yaml  four_layer_testing_methodology.md  ieee_paper_examples.md  langgraph.json  publishable_finding.md  pyproject.toml  test_execution_summary.md
docs/: tracing.md
docs/paper/: ablation_raw_data.json  ablation_study.md  evidence_package.md  generalizability.md  implementation_plan.md  related_work.md  reproducibility.md  research-notes.md  research_index.md  run_ablation.py  run_corrected_resolver.py  threat_model.md
docs/testing/: overview.md  test-catalog.md
output/batch_20260516_020804/layout_guided_vlm_local/: layout_guided_vlm_local_eval.json
output/batch_20260516_020804/summary/: paper_table.md  run_summary.json
output/batch_20260516_020804/vlm_full_page/: vlm_full_page_eval.json
output/batch_20260517_021952/layout_guided_vlm_cloud/: layout_guided_vlm_cloud_eval.json
output/batch_20260517_021952/summary/: paper_table.md  run_summary.json
output/batch_20260519_012645/band_crop_vlm_cloud/: band_crop_vlm_cloud_eval.json
scripts/: run_all_methods.py  run_benchmark.py
src/: __init__.py  config.py  evaluation.py  graph.py  ground_truth.py  ingestion.py  metrics.py  models.py  name_resolver.py  nodes.py  normalization.py  reporting.py  state.py  tracing.py
tests/: conftest.py  test_evaluation.py  test_hitl.py  test_integration.py  test_tracing.py  test_unit.py
tests/fixtures/: ambiguous_merged.xlsx  build_fixtures.py  clean_merged.xlsx  ground_truth.xlsx  test.db
workflows/: ieee_diagrams.md
(+29 files in other folders)
