[project]
name = "homecare-visit-triage-agent"
version = "0.1.0"
description = "LangGraph-based evaluation pipeline for benchmarking document extraction methods on healthcare timesheets"
requires-python = ">=3.11"

dependencies = [
    "langgraph>=0.4",
    "langchain-core>=0.3",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
